# EdgeGen

./: .gitignore  README.md  pyproject.toml  run_sdg.sh
base_harness_experiment/fastapi_server/: main.py
base_harness_experiment/src/tau2/: registry.py
fastapi_server/: main.py
mock_systems/airline/db/: airline_final.db  schema.sql
mock_systems/airline/sdg/: run_sdg_loop.sh
mock_systems/retail/db/: retail_final.db  schema.sql
mock_systems/retail/sdg/: run_sdg_loop.sh
mock_systems/toolsandbox/db/: schema.sql  toolsandbox_final.db
mock_systems/toolsandbox/sdg/: run_sdg_loop.sh
optimize_harness_experiment_real_10/src/tau2/: registry.py
src/agent_synth/: __init__.py  pyproject.toml
src/agent_synth/mock_system/: README.md  __init__.py  db.py  walker.py
src/agent_synth/synthesizer/: README.md  __init__.py  base.py
src/tau2_optimized_harness_real_10/: cli.py  run.py
src/tau2_optimized_harness_real_10/agent/: base.py  llm_agent.py
src/tau2_optimized_harness_real_10/api_service/: data_model.py
src/tau2_optimized_harness_real_10/data_model/: message.py  tasks.py
src/tau2_optimized_harness_real_10/environment/: server.py
src/tau2_optimized_harness_real_10/evaluator/: evaluator_action.py  evaluator_base.py  evaluator_env.py  evaluator_nl_assertions.py
src/tau2_optimized_harness_real_10/metrics/: agent_metrics.py  break_down_metrics.py
src/tau2_optimized_harness_real_10/orchestrator/: environment_manager.py  orchestrator.py
src/tau2_optimized_harness_real_10/user/: base.py
src/tau2_optimized_harness_syn_10/: cli.py  registry.py  run.py
(+112 files in other folders)
