[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EdgeGen"
version = "0.1.0"
description = "Agent-library-agnostic framework for mock systems and synthesis testing"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
    "backoff>=2.0.0",
    "networkx>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_synth"]
